dnl Process this file with autoconf to produce a configure script.

dnl TODO FS   Document this.
dnl TODO FS   Figure out how this really works.

AC_INIT(robodoc, 4.99.36)
AC_CONFIG_SRCDIR(Source/robodoc.h)
AC_DEFINE_UNQUOTED([ROBO_PREFIX],"$prefix", [default location for robodoc.rc])

AM_CONFIG_HEADER(Source/config.h)
AM_INIT_AUTOMAKE(robodoc, 4.99.36)

AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC

dnl Do a cross compile under cygwin
if test "`uname -o 2>/dev/null`" = Cygwin; then
  CFLAGS="$CFLAGS -mno-cygwin";
fi

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CANONICAL_HOST

dnl Test for Mac OS X
case ${host} in
*-apple-darwin*)
	OSTYPE="DARWIN"

	;;
esac

AM_CONDITIONAL([FINK], [test "x$OSTYPE" = "xDARWIN"])

dnl Add DARWIN flag for Mac OS X
if test "x$OSTYPE" = "xDARWIN";then
	CFLAGS="$CFLAGS -DDARWIN"
fi


dnl The value of --prefix is used in the sources
dnl so make a define for it.



dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_FORK
AC_CHECK_FUNCS(strstr)

AC_CONFIG_FILES([makefile Docs/makefile Docs/robodoc.1 Source/makefile])
AC_OUTPUT
